# workshop-poudlard-epsi

./: AGENTS.md  README.md  defis.csv  extract_thalie_plan_to_json.py  index.html
.github/: prompt_used.md
.github/workflows/: README.md  ci-cd.yml  hedwige-frontend.yml
14-boite-magique/: CMakeLists.txt  build.bat  demo.sh
14-boite-magique/docs/: USAGE.md
14-boite-magique/src/: main.cpp
agents/: AGENTS.md
agents/roles/: ai_copilot.md  cicd_copilot.md  data_copilot.md  design_copilot.md  documentation_copilot.md  frontend_copilot.md  infra_copilot.md  pra_copilot.md  project_lead.md  scrum_master_copilot.md  security_copilot.md
agents/templates/: README_TEMPLATE.md
assets/: index-B9suhHyY.css  index-DSkjnIAG.js
context/: defis.md
context/plans/: plan.json
infra/: COMMANDS.md  Makefile  QUICKSTART.md  STATUS.md  docker-compose.yml
infra/docs/: architecture.md  network.md  security.md
ml-plan2blend/: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  MODEL_CARD.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  example_workflow.sh  requirements.txt
ml-plan2blend/docker/: Dockerfile.blender  Dockerfile.train  docker-compose.yml
ml-plan2blend/tests/: test_metrics.py  test_vectorize.py
projects/01-dockerwarts/: .env.example  .gitignore  README.md
projects/01-dockerwarts-B/: .env  .env.example  README.md  docker-compose.yml
projects/08-chambre-secrets-3d/: .gitignore  QUICKSTART.md  README.md  build_hogwarts_plan.py  requirements.txt
projects/10-oculus-reparo/: README.md
projects/13-cours-mcgonagall/: .env.example  .eslintrc.json  .gitignore  Dockerfile  README.md  SUMMARY.md  TESTS.md  electron.js  index.html  jest.config.cjs  main.js  package-lock.json  package.json  preload.js  scraper.js  sonar-project.properties  tailwind.config.js  vite.config.js  vitest.config.js
projects/14-boite-magique/: .gitignore  CMakeLists.txt  LIVRABLES.md  PROJECT_SUMMARY.txt  QUICKSTART.md  README.md  VALIDATION_REPORT.md  build.sh
projects/15-hedwige/: DELIVERABLES.md  README.md  docker-compose.snippet.yml
projects/16-wizard-quiz-app/: .gitignore  Dockerfile  README.md  docker-compose.snippet.yml
projects/17-tableau-scores-poudlard/: .gitignore  README.md  SUMMARY.md  docker-compose.snippet.yml
projects/18-LLM/: prompts_used.md  requirements.txt  tinyllama_chat.py
projects/19-professeur-dumbledore/: .gitignore  (+4 more)
(+301 files in other folders)
